[FEAT]: Add upload avatar.
